# Proc36_personal

./: .gitignore  CMakeLists.txt  README.md  RULES.md  pair_formation_solver.py
Docs/: format.md  generated_ops.json  sample_ops.json  sample_problem_10.json  sample_problem_12.json  sample_problem_16.json  sample_problem_18.json  sample_problem_20.json  sample_problem_24.json  sample_problem_8.json  solver_ops_24.json
src/lib/: field.cpp  field.hpp  operation.hpp  problem.cpp  problem.hpp  random.hpp  timer.hpp
src/solver/: beam_stack_search.cpp  beam_stack_search.hpp
src/tools/: generate_problem.cpp  local_runner.cpp  run_solver.cpp
